fixed pie chart form always visible

--- a/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
+++ b/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
@@ -836,6 +836,6 @@ path {
   margin-left: 10px;
 }
 
-.pie-chart-data {
+#pie-chart-data {
   display: none;
 }
